syntax = "proto3";

option csharp_namespace = "Pj.Grpc.Chat";

service Chat {
  rpc Authorize(RequestAuthorize) returns (ResponseAuthorize);
  rpc Connect(RequestConnect) returns (stream Event);
  rpc Say(CommandSay) returns (None);
  rpc Leave(CommandLeave) returns (None);
}

message None {}

message RequestAuthorize {
  string name = 1;
}

message ResponseAuthorize {
  bytes session_id = 1;
}

message RequestConnect {
  bytes session_id = 1;
}

message CommandSay {
  bytes session_id = 1;
  string message = 2;
}

message CommandLeave {
    bytes session_id = 1;
}

message Event {
  oneof event {
    EventEmpty empty = 1;
    EventJoin  join  = 2;
    EventLeave leave = 3;
    EventLog   log   = 4;
    EventExit  exit  = 5;
  }
}

message EventEmpty {}

message EventJoin {
  string name = 1;
}

message EventLeave {
  string name = 1;
}

message EventLog {
  string name = 1;
  string message = 2;
}

message EventExit {}
